--- a/iSharee.html
+++ b/iSharee.html
@@ -624,7 +624,7 @@
                     <img src="https://www.dropbox.com/s/pg3z9q555fn0g0qh8fqt8/leaf.png?dl=0
                 " alt="profile">
                 </div>
-                <p class="profile-text">George Michael Pussl</p>
+                <p id="profiletext" class="profile-text">{{ username }}</p>
                 <p class="profile-subtext">Owner</p>
                 <hr>
             </div>
