--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 					const formData = new FormData(this);
 
 					fetch("https://ishare-i8td.onrender.com/register", {
-					//fetch("http://192.168.74.8:5000/register", {
+						// fetch("http://192.168.74.8:5000/register", {
 						method: "POST",
 						body: JSON.stringify(Object.fromEntries(formData.entries())),
 						headers: {
@@ -188,7 +188,7 @@
 						password: formData.get("loginPassword"),
 					};
 
-					//fetch("http://192.168.74.8:5000/login", {
+					// fetch("http://192.168.74.8:5000/login", {
 					fetch("https://ishare-i8td.onrender.com/login", {
 						method: "POST",
 						body: JSON.stringify(requestData),
@@ -298,6 +298,7 @@
 					passwordInput.type = "password";
 					toggleButton.src = "images/hide-password.png";
 				}
+				contextMenu;
 			}
 
 			// Function to toggle between login and signup forms
