--- a/images/css_sliding_cards-master/login.html
+++ b/images/css_sliding_cards-master/login.html
@@ -7,9 +7,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
 		<link rel="stylesheet" href="logincss.css" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.9/css/unicons.css">
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" />
+		<link
+			rel="stylesheet"
+			href="https://unicons.iconscout.com/release/v2.1.9/css/unicons.css" />
 	</head>
+
 	<body>
 		<a href="https://front.codes/" class="logo" target="_blank">
 			<img src="https://assets.codepen.io/1462889/fcy.png" alt="" />
@@ -37,66 +42,70 @@
 												<h4 class="mb-4 pb-3">Log In</h4>
 												<div class="form-group">
 													<input
-														type="email"
-														name="logemail"
+														type="text"
+														name="loginUsername"
 														class="form-style"
 														placeholder="Your Email"
-														id="logemail"
+														id="loginUsername"
 														autocomplete="off" />
 													<i class="input-icon uil uil-at"></i>
 												</div>
 												<div class="form-group mt-2">
 													<input
 														type="password"
-														name="logpass"
+														name="loginPassword"
 														class="form-style"
 														placeholder="Your Password"
-														id="logpass"
-														autocomplete="off" />
+														id="loginPassword"
+														autocomplete="password"
+														required="required" />
 													<i class="input-icon uil uil-lock-alt"></i>
 												</div>
-												<a href="#" class="btn mt-4">submit</a>
+												<a href="#" type="submit" class="btn mt-4">submit</a>
 												<p class="mb-0 mt-4 text-center">
 													<a href="#0" class="link">Forgot your password?</a>
 												</p>
 											</div>
 										</div>
 									</div>
+
 									<div class="card-back">
 										<div class="center-wrap">
 											<div class="section text-center">
-												<h4 class="mb-4 pb-3">Sign Up</h4>
-												<div class="form-group">
-													<input
-														type="text"
-														name="logname"
-														class="form-style"
-														placeholder="Your Full Name"
-														id="logname"
-														autocomplete="off" />
-													<i class="input-icon uil uil-user"></i>
-												</div>
-												<div class="form-group mt-2">
-													<input
-														type="email"
-														name="logemail"
-														class="form-style"
-														placeholder="Your Email"
-														id="logemail"
-														autocomplete="off" />
-													<i class="input-icon uil uil-at"></i>
-												</div>
-												<div class="form-group mt-2">
-													<input
-														type="password"
-														name="logpass"
-														class="form-style"
-														placeholder="Your Password"
-														id="logpass"
-														autocomplete="off" />
-													<i class="input-icon uil uil-lock-alt"></i>
-												</div>
-												<a href="#" class="btn mt-4">submit</a>
+												<form method="post" id="registrationForm">
+													<h4 class="mb-4 pb-3">Sign Up</h4>
+													<div class="form-group">
+														<input
+															type="text"
+															name="logname"
+															class="form-style"
+															placeholder="Your Full Name"
+															id="logname"
+															autocomplete="off" />
+														<i class="input-icon uil uil-user"></i>
+													</div>
+													<div class="form-group mt-2">
+														<input
+															type="email"
+															name="logemail"
+															class="form-style"
+															placeholder="Your Email"
+															id="logemail"
+															autocomplete="off" />
+														<i class="input-icon uil uil-at"></i>
+													</div>
+													<div class="form-group mt-2">
+														<input
+															type="password"
+															name="logpass"
+															class="form-style"
+															placeholder="Your Password"
+															id="logpass"
+															autocomplete="off" />
+														<i class="input-icon uil uil-lock-alt"></i>
+													</div>
+													<a href="#" class="btn mt-4">submit</a>
+												</form>
 											</div>
 										</div>
 									</div>
