--- a/images/css_sliding_cards-master/index.html
+++ b/images/css_sliding_cards-master/index.html
@@ -54,5 +54,22 @@
             </label>
         </div>
     </div>
+
+
+    <div id="container" class="container">
+        <img src="" alt="" id="image" class="image"><span id="contents"></span>
+        <p id="i2"></p>
+    </div>
+
+    <div class="container2">
+        <div id="container-contents">
+        <input type="text" id="input-box">
+        <label:text id="username"></label:text>
+        <div id="logo"></div>
+        <h2 id="header"></h2>
+    </div>
+    </div>
+
+    
 </body>
 </html>
