--- a/iSharee.html
+++ b/iSharee.html
@@ -881,8 +881,8 @@
 	<script src="res_added.js"></script>
 	<script src="stgSize.js"></script>
 	<script src="test.js"></script>
-	<script src="deletefunction.js"></script>
-	<script src="downloadfunction.js"></script>
+	<!-- <script src="deletefunction.js"></script> -->
+	<!-- <script src="downloadfunction.js"></script> -->
 
 	<script>
 		// Function to display success message
