--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>iSharee</title>
+		<link rel="shortcut icon" href="/iShareApp/images/favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" href="loginStyle.css" />
 		<link
 			rel="stylesheet"
