--- a/iSharee.html
+++ b/iSharee.html
@@ -241,36 +241,14 @@
 							<div class="chart-data-details">
 								<div class="chart-details-header"></div>
 							</div>
+						</div>
+					</div>
 
-							<div class="chart-container-wrapper big">
-								<div class="chart-container">
-									<div class="chart-container-header">
-										<!-- <h1 class="section-header">Quick Access</h1> -->
-									</div>
-									<div class="line-chart">
-										<div class="access-links">
-											<!-- Wrapper -->
-											<!-- Wrapper -->
-											<div class="wrapper">
-												<!-- Images Area will be populated dynamically -->
-												<!-- Buttons Area -->
-												<div class="buttons-area">
-													<div class="previous-btn">
-														<i class="bx bx-chevron-left"></i>
-													</div>
-													<div class="next-btn">
-														<i class="bx bx-chevron-right"></i>
-													</div>
-												</div>
-												<!-- Pagination Area -->
-												<div class="pagination-area" id="">
-													<div class="photosFileList"></div>
-												</div>
-											</div>
-											<!-- End Wrapper -->
-										</div>
-									</div>
-								</div>
+					<div class="chart-container-wrapper big">
+						<div class="chart-container">
+							<div id="slideShow" class="slideShow">
+								<p>images slide show</p>
+								<div id="photoSlider" class="photoSlider"></div>
 							</div>
 						</div>
 					</div>
@@ -967,7 +945,88 @@
 			}
 		});
 	</script>
+<script>
+	const f12_token = localStorage.getItem("token");
+	// Define a function to fetch and display files
+function fetchAndDisplayFiles() {
+    fetch("https://ishare-i8td.onrender.com/files", {
+        // Fetch files from the Flask backend
+        headers: {
+            Authorization: `Bearer ${f12_token}`,
+        },
+    })
+    .then((response) => {
+        if (!response.ok) {
+            throw new Error(`HTTP error! Status: ${response.status}`);
+        }
+        return response.json();
+    })
+    .then((data) => {
+        const photosContainer = document.getElementById("photoSlider");
+        const images = [];
 
+        photosContainer.innerHTML = "";
+
+        data.files.forEach((file) => {
+            const fileExtension = file.filename.split(".").pop().toLowerCase();
+
+            if (["jpg", "jpeg", "svg", "png"].includes(fileExtension)) {
+                const imageContainerBox = document.createElement("div");
+                imageContainerBox.className = "image-container-box";
+                imageContainerBox.id = `file-${file.id}`; // Use file ID
+                const imageDiv = document.createElement("div");
+                imageDiv.className = "image";
+                imageDiv.id = "image";
+                const imageElement = document.createElement("img");
+                imageElement.src = `data:${file.content_type};base64,${file.content}`;
+                imageDiv.appendChild(imageElement);
+                imageContainerBox.appendChild(imageDiv);
+                photosContainer.appendChild(imageContainerBox);
+
+                // Add the image element to the list
+                images.push(imageContainerBox);
+                imageContainerBox.style.display = "none"; // Hide all images initially
+            }
+        });
+
+        // Start the slideshow
+        startSlideshow(images);
+    });
+}
+
+
+// Function to start the slideshow
+function startSlideshow(images) {
+    let currentIndex = 0;
+
+    function showNextImage() {
+        // Hide the current image
+        if (images[currentIndex]) {
+            images[currentIndex].style.display = "none";
+        }
+
+        // Increment the index
+        currentIndex = (currentIndex + 1) % images.length;
+
+        // Show the next image
+        if (images[currentIndex]) {
+            images[currentIndex].style.display = "block";
+        }
+    }
+
+    // Initially show the first image
+    if (images[0]) {
+        images[0].style.display = "block";
+    }
+
+    // Set an interval to change the image every 3 seconds
+    setInterval(showNextImage, 3000);
+}
+
+// Call the function to fetch and display files
+fetchAndDisplayFiles();
+
+</script>
 </body>
 
 </html>
